# blake2-bench

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
